--- a/index.manifest.json
+++ b/index.manifest.json
@@ -1,1 +1,16 @@
-{"background_color":"#000000","display":"standalone","icons":[{"sizes":"144x144","src":"index.144x144.png","type":"image/png"},{"sizes":"180x180","src":"index.180x180.png","type":"image/png"},{"sizes":"512x512","src":"index.512x512.png","type":"image/png"}],"name":"Tretris","orientation":"landscape","start_url":"./index.html"}
+{
+  "name": "Tretris",
+  "short_name": "Tretris",
+  "description": "Multi-directional Tetris with procedural folk music",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "orientation": "landscape",
+  "background_color": "#000000",
+  "theme_color": "#1a1a2e",
+  "categories": ["games"],
+  "icons": [
+    {"sizes": "144x144", "src": "index.144x144.png", "type": "image/png"},
+    {"sizes": "180x180", "src": "index.180x180.png", "type": "image/png"},
+    {"sizes": "512x512", "src": "index.512x512.png", "type": "image/png", "purpose": "any maskable"}
+  ]
+}
